Add final website for prod

--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,17 @@
 <body>
     <header>
         <nav>
-            <button class="nav-btn">Home</button>
-            <button class="nav-btn">Menu</button>
-            <button class="nav-btn">Contact Us</button>
+            <button class="nav-btn" id="home">HOME</button>
+            <button class="nav-btn" id="menu">MENU</button>
+            <button class="nav-btn" id="about">ABOUT US</button>
         </nav>
     </header>
-    <div id="content"></div>
+    <div id="content">
+
+    </div>
+    <footer>
+        <p>Creado por Emi</p>
+    </footer>
 </body>
 </html>
 
